# rust-wasm-on-lambda-edge

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  SECURITY.md
.github/: CONTRIBUTING.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: CI.yaml  artifact.yaml  audit.yaml  ci.yaml  codeql-analysis.yml  dependabot-auto-merge.yml  release.yaml
fixtures/: call-test.js  example-context.json  origin-request-with-body.json  origin-request.json  origin-response.json  viewer-request.json  viewer-response.json
node/: README.md  package-lock.json  package.json  rollup.config.js  tsconfig-build.json  tsconfig.json
node/entrypoints/: origin-request.ts
node/lib/handlers/: origin-request.ts
rust/: Cargo.toml  README.md
rust/src/: lib.rs  types.rs
rust/src/types/: cloudfront.rs
